--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </head>
     <body>
         <div class="container">
-        <p>Your name is:</p>
-        <p id="one">Adesewa Owolade</p>
+        <p>Your css designed name is:</p>
+        <p id="one"></p>
         </div>
         
         <script>
