--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </head>
     <body>
         <div class="container">
-        <p>Your css designed name is:</p>
+        <p>Your CSS3 designed name is:</p>
         <p id="one"></p>
         </div>
         
