--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         
         <script>
-        let yourName = prompt("What's your full name?");
+        let yourName = prompt("What full name do you wanna designed?");
         let getName = document.getElementById("one");
         getName.textContent =yourName;
         
