--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSS3 design</title>
+        <title>CSS3 text design</title>
         <style>
             #one {
                  position: relative;
@@ -37,7 +37,7 @@
         </div>
         
         <script>
-        let yourName = prompt("What full name do you wanna designed?");
+        let yourName = prompt("Enter text to design");
         let getName = document.getElementById("one");
         getName.textContent =yourName;
         
