--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
                  color:blue;
                  text-shadow: 3px 3px 0px green, 6px 6px 0px red, 9px 9px 0px black;
                  letter-spacing: 10px;
+                 font-family: verdana;
             }
             #two {
                  font-size: 9em;
                  text-transform: capitalize;
                  color:blue;
+                 font-family: san-serif;
                  -webkit-transform: skew(-5deg, -5deg) rotate(5deg);
                          transform: skew(-7deg, -7deg) rotate(7deg);
                  -webkit-transform-origin: center center;
