--- a/index.html
+++ b/index.html
@@ -16,21 +16,26 @@
             }
             #two {
                  font-size: 9em;
-                 text-transform: capitalize;
-                 color:blue;
-                 font-family: san-serif;
+                 text-transform:uppercase;
+                 color:darkred;
+                 font-family: Lucida Sans Unicode;
                  -webkit-transform: skew(-5deg, -5deg) rotate(5deg);
                          transform: skew(-7deg, -7deg) rotate(7deg);
                  -webkit-transform-origin: center center;
                          transform-origin: center center;
-                 text-shadow: 1px 1px green,
-                              2px 2px green,
-                              3px 3px green,
-                              4px 4px green,
-                              5px 5px red,
-                              6px 6px red,
+                 text-shadow: 1px 1px cyan,
+                              2px 2px cyan,
+                              3px 3px cyan,
+                              4px 4px cyan,
+                              5px 5px cyan,
+                              6px 6px cyan,
                               7px 7px red,
-                              8px 8px black,
+                              8px 8px purple,
+                              9px 9px purple,
+                              10px 10px purple,
+                              11px 11px purple,
+                              12px 12px purple,
+                              13px 13px black,
                               9px 9px black,
                               10px 10px black,
                               11px 11px 15px rgba(0,0,0,0.5);
